force-app/main/default/objects/BOM_Line__c/BOM_Line__c.object-meta.xml
<CustomObject>
    <label>BOM Line</label>
    <nameField>
        <displayFormat>LINE-{00000}</displayFormat>
        <label>BOM Line No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>