force-app/main/default/objects/BOM_Line__c/fields/BOM_Header__c.field-meta.xml
<CustomField>
    <fullName>BOM_Header__c</fullName>
    <label>BOM Header</label>
    <referenceTo>BOM_Header__c</referenceTo>
    <relationshipLabel>BOM Lines</relationshipLabel>
    <relationshipName>BOM_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>