force-app/main/default/objects/BOM_Line__c/fields/Component_Product__c.field-meta.xml
<CustomField>
    <fullName>Component_Product__c</fullName>
    <label>構成品製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOM Lines (構成品)</relationshipLabel>
    <relationshipName>BOM_Lines_Component</relationshipName>
    <type>Lookup</type>
</CustomField>