force-app/main/default/objects/BOM_Line__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>アセンブリ</fullName><default>false</default><label>アセンブリ</label></value>
            <value><fullName>部品</fullName><default>true</default><label>部品</label></value>
            <value><fullName>素材</fullName><default>false</default><label>素材</label></value>
            <value><fullName>ファントム</fullName><default>false</default><label>ファントム</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>