force-app/main/default/objects/BOM_Line__c/fields/Find_Number__c.field-meta.xml
<CustomField>
    <fullName>Find_Number__c</fullName>
    <label>図面バルーン番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>