force-app/main/default/objects/BOM_Line__c/fields/Is_Phantom__c.field-meta.xml
<CustomField>
    <fullName>Is_Phantom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ファントム品目</label>
    <type>Checkbox</type>
</CustomField>