force-app/main/default/objects/BOM_Line__c/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <label>調達リードタイム（日）</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>