force-app/main/default/objects/BOM_Line__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>行番号</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>