force-app/main/default/objects/BOM_Line__c/fields/Reference_Designator__c.field-meta.xml
<CustomField>
    <fullName>Reference_Designator__c</fullName>
    <label>参照記号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>