force-app/main/default/objects/BOM_Line__c/fields/Sub_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Cost__c</fullName>
    <label>サブコンポーネント原価合計</label>
    <summarizedField>BOM_SubComponent__c.Extended_Cost__c</summarizedField>
    <summaryForeignKey>BOM_SubComponent__c.BOM_Line__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>